# pyhtmlcv

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.md  README.md  build.sh  cv.json  index.html  lietu.json  pyhtmlcv.py  pyhtmlcv.sh  pyproject.toml  requirements.txt  setup.sh  style.css
templates/: cv.html  style.less  variables.less
templates/default/: _variables.scss  index.html  style.scss
